sort handouts into folder

--- a/bin/build
+++ b/bin/build
@@ -11,4 +11,8 @@
   for file in *.pdf; do
     mv $file ../pdf/$file
   done
+  cd ../pdf
+  for file in handout-*.pdf; do
+    mv $file handouts/$file
+  done
 )
