--- a/bin/build
+++ b/bin/build
@@ -3,16 +3,17 @@
 (
   cd ./tex
   for file in *.tex; do
-    pdflatex $file; pdflatex $file #twice for table of contents
+    pdflatex -output-directory aux $file 
+	pdflatex -output-directory aux $file #twice for table of contents
   done
   for file in handouts/*/*.tex; do
-    pdflatex $file
+    pdflatex -output-directory aux $file
   done
   for file in rats/*.tex; do
-    pdflatex $file
+    pdflatex -output-directory aux $file
   done
-  for file in *.pdf; do
-    mv $file ../pdf/$file
+  for file in aux/*.pdf; do
+    mv $file ../pdf/  
   done
   cd ../pdf
   for file in handout-*.pdf; do
