--- a/bin/build
+++ b/bin/build
@@ -2,6 +2,7 @@
 
 (
   cd ./tex
+  mkdir -p aux
   for file in *.tex; do
     pdflatex -output-directory aux $file
 	pdflatex -output-directory aux $file #twice for table of contents
