--- a/bin/build
+++ b/bin/build
@@ -7,6 +7,10 @@
     pdflatex -output-directory aux $file
     pdflatex -output-directory aux $file #twice for table of contents
   done
+  for file in slides/*.tex; do
+    pdflatex -output-directory aux $file
+    pdflatex -output-directory aux $file #twice for table of contents
+  done
   for file in handouts/*/*.tex; do
     pdflatex -output-directory aux $file
   done
@@ -22,5 +26,8 @@
   done
   for file in rat-*.pdf; do
     mv $file rats/$file
+  done
+  for file in slides-*.pdf; do
+  	mv $file slides/$file
   done
 )
