--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,8 @@ tex/aux
 *.pdf
 !pdf/**/*.pdf
 
+#This allows users to partition sections as desired
+tex/modules/*/index.tex
+
 # MacOS
 *.DS_Store
