--- a/exercises/bin/build
+++ b/exercises/bin/build
@@ -13,6 +13,7 @@ fi
 
 for file in $FILES
 do
+  echo "Building ${file::-5}"
   sage $1/mastr.sage ${file::-5} build
   ruby $1/mastr.rb ${file::-5} build
 done
