--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 tex/aux
 *.pdf
 !pdf/**/*.pdf
+*.syncdb
 
 
 
@@ -21,3 +22,7 @@ tex/aux
 
 # exercises
 exercises
+source/exercises
+
+# PreTeXt-CLI Build
+output
