upgrade to pretext-cli 0.3

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,16 @@ deprecated/tex/aux
 
 # PreTeXt-CLI Build
 output
-!docs/*
 
 # Copy of PreTeXt core for slides
 slides/pretext
 slides/slides.ptx
+
+# assets generated from source
+generated-assets
+
+# error logs
+.error-schema.log
+error-schema.log
+.error-syntax.log
+error-syntax.log
