--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pretextbook = "*"
+pretextbook = "0.3"
 
 [dev-packages]
 
 [requires]
 python_version = "3.9"
+
+[pipenv]
+allow_prereleases = true
