update codechat for quicker build

--- a/codechat_config.yaml
+++ b/codechat_config.yaml
@@ -32,7 +32,7 @@ output_path: output/deploy/2023
 # - ``{project_path}``: an absolute path to the directory containing this file.
 # - ``{source_path}``: the ``source_path`` above, but as an absolute path.
 # - ``{output_path}``: the ``output_path`` above, but as an absolute path.
-args: pretext build web
+args: pretext build web --xmlid {xml_id}
 
 # ``html_ext``: optional; defaults to ``.html``. The extension used by this renderer when generating HTML files.
 #html_ext: .html
