--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -8,6 +8,9 @@
   // If you only intend to build for web and don't have any latex-image generated assets, you can use a smaller image:
   // "image": "oscarlevin/pretext:lite",
 
+  // Ensure correct version of PreTeXt
+  "postCreateCommand": "pip install -r requirements.txt",
+
   // Add gh cli as a feature (to support chodechat)
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {}
