FIx codechat config

--- a/codechat_config.yaml
+++ b/codechat_config.yaml
@@ -25,7 +25,7 @@
 source_path: source
 
 # ``output_path``: required. A path to the root of the HTML output produced by this renderer. Relative paths are rooted in the directory containing this configuration file.
-output_path: output/deploy/2023
+output_path: output/web
 
 # ``args``: required string or sequence of strings. This provides the arguments to invoke the renderer. These strings may optionally contain the following replacement values:
 #
