--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,25 @@
+# <!-- Managed automatically by PreTeXt authoring tools -->
+# (delete the above line to manage this file manually)
+
 # Boilerplate list of files in a PreTeXt project for git to ignore
 # ensure this file is tracked
 !.gitignore
 
-# don't track unpublished builds
+# don't track unpublished builds or stage
 output
 
 # don't track assets generated from source
 generated-assets
+
+# don't track the executables.ptx file
+executables.ptx
 
 # don't track node packages
 node_modules
 
 # don't track error logs
 .error_schema.log
-cli.log
-logs/*
+logs
 
 # don't track OS related files (windows/macos/linux)
 .DS_Store
@@ -46,7 +51,6 @@ ehthumbs_vista.db
 .fuse_hidden*
 .Trash-*
 .nfs*
-*.term
 
 # Don't include VSCode generated files
 .vscode
@@ -90,6 +94,9 @@ GitHub.sublime-settings
 .dropbox
 .dropbox.attr
 .dropbox.cache
+
+# Don't track codechat config (will be generated automatically)
+codechat_config.yaml
 
 # project-specific stuff
 RATs/*
