--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-pretext == 2.0.0.dev20230822
+# <!-- Managed automatically by PreTeXt authoring tools -->
+pretext == 2.1.0
 checkit-dashboard == 0.2.6
